--- a/src/007-template-hammihan/index.html
+++ b/src/007-template-hammihan/index.html
@@ -446,7 +446,7 @@
             <swiper-slide
               class="h-full flex p-4"
               style="
-                background-image: url(../../assets/hammihan/post01.bmp);
+                background-image: url(../../assets/hammihan/post01.jpg);
                 background-position: center;
                 background-size: cover;
               "
@@ -466,7 +466,7 @@
             <swiper-slide
               class="h-full flex p-4"
               style="
-                background-image: url(../../assets/hammihan/post02.bmp);
+                background-image: url(../../assets/hammihan/post02.jpg);
                 background-position: center;
                 background-size: cover;
               "
@@ -486,7 +486,7 @@
             <swiper-slide
               class="h-full flex p-4"
               style="
-                background-image: url(../../assets/hammihan/post01.bmp);
+                background-image: url(../../assets/hammihan/post01.jpg);
                 background-position: center;
                 background-size: cover;
               "
@@ -506,7 +506,7 @@
             <swiper-slide
               class="h-full flex p-4"
               style="
-                background-image: url(../../assets/hammihan/post02.bmp);
+                background-image: url(../../assets/hammihan/post02.jpg);
                 background-position: center;
                 background-size: cover;
               "
@@ -1842,18 +1842,18 @@
             </div>
 
             <div class="border border-white p-4">
-              <img src="../../assets/hammihan/scqnqc0q.bmp" alt="" />
+              <img src="../../assets/hammihan/scqnqc0q.jpg" alt="" />
             </div>
           </div>
 
           <!-- banner -->
           <div class="mb-8">
-            <img src="../../assets/hammihan/tawu0zuv.bmp" alt="" />
+            <img src="../../assets/hammihan/tawu0zuv.jpg" alt="" />
           </div>
 
           <!-- banner -->
           <div class="mb-8">
-            <img src="../../assets/hammihan/eh9uwzak.bmp" alt="" />
+            <img src="../../assets/hammihan/eh9uwzak.jpg" alt="" />
           </div>
         </div>
       </section>
