--- a/src/007-template-hammihan/index.html
+++ b/src/007-template-hammihan/index.html
@@ -398,7 +398,7 @@
             </div>
 
             <div class="border border-white p-4">
-              <img src="../../assets/hammihan/gqtsqboe.bmp" alt="" />
+              <img src="../../assets/hammihan/gqtsqboe.jpg" alt="" />
             </div>
           </div>
 
@@ -415,18 +415,18 @@
             </div>
 
             <div class="border border-white p-4">
-              <img src="../../assets/hammihan/jyklic0u.bmp" alt="" />
+              <img src="../../assets/hammihan/jyklic0u.jpg" alt="" />
             </div>
           </div>
 
           <!-- banner -->
           <div class="mb-8">
-            <img src="../../assets/hammihan/haaec2nc.bmp" alt="" />
+            <img src="../../assets/hammihan/haaec2nc.jpg" alt="" />
           </div>
 
           <!-- banner -->
           <div class="mb-8">
-            <img src="../../assets/hammihan/inxqxd4f.bmp" alt="" />
+            <img src="../../assets/hammihan/inxqxd4f.jpg" alt="" />
           </div>
         </div>
         <!-- ####################################################### -->
